    does not exist, return HTTP 500 for error pages, and specify the
    "canonical" meta tag for redirected topics.
  * Remove ability to automatically upgrade from versions prior to 0.8.0.
  * Remove unused/obsolete Javascript and namespace the remaining code.
  * Organize uploaded images by virtual wiki on the file system.
  * Upgrade to Spring Framework 3.0.3.RELEASE.
  * Upgrade to Spring Security 3.0.3.RELEASE.
  * Upgrade to Ehcache 2.1.0.
  * Upgrade to commons-fileupload-1.2.2.

Translation Updates:

  * Updated German translations (axelclk).
  * Updated Russian translations (shar).


0.9.2
=====

New Features:

  * Update the LDAP sample in applicationContext-security.xml with an example
    of using LDAP for authentication and JAMWiki for role management.  Provided
    by Bobby Lawrence.

Bugfixes:

  * Fix list parsing for lists that end with </td> or </div>.
  * Fix the manual upgrade steps for namespace in the UPGRADE.txt document.
    Reported by an anonymous user.
  * Fix an issue in which non-image file uploads could fail on some operating
    systems.  Reported by an anonymous user.
  * Fix an invalid "You may not remove ROLE_SYSADMIN from your own account"
    message on the Special:Roles page when updating the sysadmin account.


0.9.1
=====

New Features:

  * Support added for the {{DISPLAYTITLE}} magic word.

Bugfixes:

  * __NOEDITSECTION__ was being improperly stripped from topics.
  * Fix a potental JDBC error with FORWARD_ONLY result sets when parsing
    deleted topics.  Reported by cmasuch.
  * Case-insensitive topic names and deleted topics were not being properly
    updated in the cache.
  * Exclude redirects when calculating the number of articles using the
    NUMBEROFARTICLES magic word.
  * Upgrade to Lucene Search 3.0.2 to resolve a LockObtainFailedException
    error.  Reported by TimStone.


0.9.0
=====

New Features:

  * Signficant updates to the syntax parser, including support for additional